<resources>
    <string name="app_name">EnderPlan</string>
    <string name="app_name_en" translatable="false">EnderPlan</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_star">Star</string>
    <string name="action_create">Create</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="button_remove">Remove</string>
    <string name="button_delete">Delete</string>
    <string name="button_move">Move</string>
    <string name="button_select">Select</string>
    <string name="button_undo">Undo</string>
    <string name="button_complete">Complete</string>
    <string name="button_delay">Delay</string>
    <string name="button_enable">Enable</string>
    <string name="button_disable">Disable</string>
    <string name="button_restart">Restart</string>
    <string name="button_start">Start</string>
    <string name="title_star">Star</string>
    <string name="title_type">Type</string>
    <string name="title_deadline">Deadline</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_name">Name</string>
    <string name="title_color">Color</string>
    <string name="title_pattern">Pattern</string>
    <string name="dscpt_unsettled">Unsettled</string>
    <string name="dscpt_touch_to_set">Touch to set</string>
    <string name="date_format">E, MMM dd, yyyy</string>
    <string name="date_time_format">E, MMM dd, yyyy kk:mm</string>
    <string name="date_time_format_short">MM/dd/yyyy E kk:mm</string>
    <string name="toast_empty_content">Cannot save an empty content</string>
    <string name="toast_empty_type_name">Cannot save an empty type name</string>
    <string name="toast_longer_type_name">Type name should not longer than 20 characters</string>
    <string name="toast_type_name_exists">Type name exists</string>
    <string name="toast_type_mark_exists">Type mark exists</string>
    <string name="toast_type_mark_color_exists">Type mark color exists</string>
    <string name="snackbar_create_format">\"%s\" has been created</string>
    <string name="snackbar_delete_format">\"%s\" has been deleted</string>
    <string name="transition_type_mark_icon">Type mark icon transition</string>
    <string name="transition_type_name_text">Type name text transition</string>
    <string name="transition_type_mark_icon_format">Type mark icon transition at position %d</string>
    <string name="toast_past_deadline">The deadline should be in the future</string>
    <string name="toast_past_reminder_time">The reminder time should be in the future</string>
    <string name="toast_past_deadline_and_reminder_time">The deadline and reminder time should be in the future</string>
    <string name="dscpt_time_within_1_minute">Within 1 minute</string>
    <string name="dscpt_time_1_minute">1 minute</string>
    <string name="dscpt_time_multi_minutes">%d minutes</string>
    <string name="dscpt_time_today">%s today</string>
    <string name="dscpt_time_tomorrow">%s tomorrow</string>
    <string name="dscpt_time_yesterday">%s yesterday</string>
    <string name="dscpt_time_general">%1$s, %2$s</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_time">Time</string>
    <string name="text_date">Date</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_my_plans">My Plans</string>
    <string name="action_all_types">All Types</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="nav_sub_header">Others</string>
    <string name="text_uc_plan_count">Uncompleted</string>
    <string name="text_plan_count">Total</string>
    <string name="text_today_uc_plan_count">Today</string>
    <string name="create_plan">Create a new plan</string>
    <string name="content">Content</string>
    <string name="hint_content_editor_creation">I want to …</string>
    <string name="content_error_empty">Forget this?</string>
    <string name="more_settings">More Settings</string>
    <string name="type">Type</string>
    <string name="type_prompt">Choose Type</string>
    <string name="more_info">More Information</string>
    <string name="creation_time">Creation Time</string>
    <string name="deadline">Deadline</string>
    <string name="message_deadline_overdue_dialog">Oops, it seems that your deadline is out of date</string>
    <string name="pos_button_deadline_overdue_dialog">OK, I\'ll change it</string>
    <string name="reminder">Reminder</string>
    <string name="create">Create</string>
    <string name="created_prompt">has been created successfully</string>
    <string name="deleted_prompt">has been deleted</string>
    <string name="plan_operation">Plan Operation</string>
    <string name="text_view_details">View Details</string>
    <string name="text_empty_plan_list_1">No plans here</string>
    <string name="text_empty_plan_list_2">Touch \"+\" button to create one</string>
    <string name="toast_double_press_exit">Press once again to exit EnderPlan</string>
    <string name="title_fragment_my_plans">My Plans</string>
    <string name="title_fragment_all_types">All Types</string>
    <string name="type_name_hint">The name of your new type</string>
    <string name="title_activity_plan_creation">New Plan</string>
    <string name="toast_shortcut_disabled">Shortcut disabled</string>
    <string name="text_new_type">New Type</string>
    <string name="title_activity_plan_detail">Plan Detail</string>
    <string name="other_info">Type, deadline and reminder</string>
    <string name="text_make_plan_c">Complete</string>
    <string name="text_make_plan_uc">Make it uncompleted</string>
    <string name="edit_content_hint">Change your plan content here</string>
    <string name="prompt_empty_content">It seems that you want to save a empty content?</string>
    <string name="title_dialog_delete_plan">Delete Plan</string>
    <string name="msg_dialog_delete_plan_pt1">The following plan will be deleted:</string>
    <string name="edit_plan">Edit plan</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="delete">Delete</string>
    <string name="edited_prompt">The changes has been saved successfully</string>
    <string name="title_activity_type_detail">Type Detail</string>
    <string name="toast_type_not_empty">Cannot delete, type is not empty</string>
    <string name="msg_dialog_delete_type">This type and all of its plans will be deleted.</string>
    <string name="hint_editor_content_format">Create a plan in \"%s\"</string>
    <string name="show_c_plans">Show completed plans</string>
    <string name="toast_create_plan_failed">Content can\'t be empty</string>
    <string name="toast_create_plan_success">Create successfully</string>
    <string name="title_dialog_content_editor">Content Editor</string>
    <string name="hint_content_editor_edit">New content of this plan</string>
    <string name="title_dialog_type_not_empty">Type Is Not Empty</string>
    <string name="msg_dialog_type_not_empty">There are %s belong to this type, you can move them to another type, delete them all, or cancel.</string>
    <string name="title_dialog_type_picker_for_plan_migration">Move %s To</string>
    <string name="msg_dialog_migrate_plan">%1$s will be moved to type \"%2$s\", then type \"%3$s\" will be deleted.</string>
    <string name="btn_dialog_move_and_delete">Move And Delete</string>
    <string name="title_dialog_last_type">Cannot Delete</string>
    <string name="msg_dialog_last_type">This is the last type.</string>
    <string name="text_uncompleted_plan_count">%s uncompleted</string>
    <string name="title_activity_type_creation">New Type</string>
    <string name="text_new_type_name">New Type</string>
    <string name="text_empty_type_name">(Empty)</string>
    <string name="title_dialog_type_name_editor">Type Name Editor</string>
    <string name="hint_type_name_editor_creation">The name of new type</string>
    <string name="hint_type_name_editor_edit">New name of this type</string>
    <string name="title_activity_type_edit">Type Edit</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="dscpt_reminder">EnderPlan Reminder</string>
    <string name="text_delay">Delay</string>
    <string name="text_detail">Detail</string>
    <string name="text_complete">Complete</string>
    <string name="text_back">Back</string>
    <string name="text_1_hour">1 hour</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_more">More</string>
    <string name="toast_delay_10_minutes">10 minutes later</string>
    <string name="toast_delay_1_hour">1 hour later</string>
    <string name="toast_delay_tomorrow">tomorrow</string>
    <string name="toast_delay_more">at %s</string>
    <string name="toast_reminder_delayed_format">I will remind you %s</string>
    <string name="toast_reminder_delayed_5min">I will notify you 5 minutes later</string>
    <string name="toast_reminder_canceled">Reminder has been canceled</string>
    <string name="toast_plan_completed">Plan has been marked as completed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_night_mode">Night Mode</string>
    <string name="title_dialog_switch_night_mode">Restart EnderPlan?</string>
    <string name="msg_dialog_switch_night_mode">EnderPlan needs a restart to switch between day and night mode.</string>
    <string name="pref_summary_on">On</string>
    <string name="pref_summary_off">Off</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_drawer_header_display">Top of the Drawer Displays</string>
    <string name="pref_title_type_list_item_end_display">End of the Type List Item Displays</string>
    <string name="title_dialog_reset_settings">Reset Settings?</string>
    <string name="msg_dialog_reset_settings">Settings will be reset to default, EnderPlan will restart.</string>
    <string name="btn_dialog_reset_settings">Reset And Restart</string>
    <string name="title_activity_about">About</string>
    <string name="text_slogan">Make plans until the world ends!</string>
    <string name="title_fragment_about">About</string>
    <string name="title_intro">Intro</string>
    <string name="text_intro">EnderPlan is an simple app that helps you manage your plans.</string>
    <string name="title_ender_series">Ender Series</string>
    <string name="text_ender_series">Inspired by Enderman in Minecraft.</string>
    <string name="text_span_seg_enderman">Enderman</string>
    <string name="text_span_seg_minecraft">Minecraft</string>
    <string name="text_span_seg_enderman_url">http://minecraft.gamepedia.com/Enderman</string>
    <string name="title_developer">Developer</string>
    <string name="text_developer">EnderPlan is written by Zack. Contact me if you find bugs or have recommendations for this app.</string>
    <string name="title_guide_page_welcome">Welcome</string>
    <string name="dscpt_guide_page_welcome">Touch the right arrow to continue</string>
    <string name="title_dialog_fragment_type_mark_color_picker">Color Picker</string>
    <string name="btn_custom">Custom</string>
    <string name="title_dialog_fragment_type_mark_pattern_picker">Pattern Picker</string>
    <string name="title_dialog_fragment_type_picker">Type Picker</string>
    <string name="btn_new_type">New Type</string>
</resources>