<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="night_mode"
        android:title="@string/pref_title_night_mode"
        android:summaryOn="@string/pref_summary_on"
        android:summaryOff="@string/pref_summary_off"
        android:defaultValue="false"/>

    <ListPreference
        android:key="drawer_header_display"
        android:title="@string/pref_title_drawer_header_display"
        android:entries="@array/pref_entries_drawer_header_display"
        android:entryValues="@array/pref_values_drawer_header_display"
        android:defaultValue="uc_plan_count"/>

    <ListPreference
        android:key="type_list_item_end_display"
        android:title="@string/pref_title_type_list_item_end_display"
        android:entries="@array/pref_entries_type_list_item_end_display"
        android:entryValues="@array/pref_values_type_list_item_end_display"
        android:defaultValue="single_type_uc_plan_count"/>

</PreferenceScreen>