<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.PlanDetailActivity">

    <item
        android:id="@+id/action_star"
        android:title="@string/action_star"
        android:orderInCategory="80"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_star_border_black_24dp"
        tools:visible="true"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="90"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

</menu>
