<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.TypeCreationActivity"
    tools:showIn="@layout/activity_type_creation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <me.imzack.lib.circlecolorview.CircleColorView
            android:id="@+id/ic_type_mark"
            android:layout_width="56dp"
            android:layout_height="56dp"/>

        <TextView
            android:id="@+id/text_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/text_new_type_name"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <me.imzack.app.end.view.widget.ItemView
        android:id="@+id/item_type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:iconImageSrc="@drawable/ic_folder_black_24dp"
        app:titleText="@string/title_name"/>

    <include layout="@layout/divider"/>

    <me.imzack.app.end.view.widget.ItemView
        android:id="@+id/item_type_mark_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:iconImageSrc="@drawable/ic_palette_black_24dp"
        app:titleText="@string/title_color"/>

    <include layout="@layout/divider"/>

    <me.imzack.app.end.view.widget.ItemView
        android:id="@+id/item_type_mark_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:iconImageSrc="@drawable/ic_image_black_24dp"
        app:titleText="@string/title_pattern"
        app:descriptionText="@string/dscpt_touch_to_set"/>

    <include layout="@layout/divider"/>

</LinearLayout>