<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.dialog.TypePickerDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_fragment_type_picker"
        android:textSize="@dimen/dialog_title_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:elevation="2dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_type_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        app:spanCount="3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_new_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_type"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_select"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_select"
            android:layout_marginEnd="4dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

    </RelativeLayout>

</LinearLayout>
