<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:background="@color/colorPrimary"
    tools:context=".view.fragment.SimpleGuidePageFragment">

    <ImageView
        android:id="@+id/image_subject"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@drawable/img_logo"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:text="@string/title_guide_page_welcome"/>

    <TextView
        android:id="@+id/text_dscpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorPrimaryLight"
        android:lines="4"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        tools:text="@string/dscpt_guide_page_welcome"/>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        style="@style/Widget.AppCompat.Button.Colored"
        tools:text="@string/button_start"/>

</LinearLayout>
