<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.dialog.TypeMarkColorPickerDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_fragment_type_mark_color_picker"
        android:textSize="@dimen/dialog_title_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:elevation="2dp"/>

    <ViewAnimator
        android:id="@+id/switcher_color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <GridView
            android:id="@+id/grid_type_mark_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:numColumns="3"
            android:scrollbars="none"
            android:listSelector="@android:color/transparent"
            android:choiceMode="singleChoice"
            tools:layout_height="300dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.zack.enderplan.view.widget.CircleColorView
                android:id="@+id/ic_type_mark_color"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/text_type_mark_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                tools:text="#FF543B4A"/>

            <!--不要设置ColorPicker的任何layout属性，因为运行时动态设置LayoutParams的时候会清空这些属性-->
            <com.zack.enderplan.view.widget.ColorPicker
                android:id="@+id/picker_type_mark_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ViewAnimator>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_picker_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_custom"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_select"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_select"
            android:layout_marginEnd="4dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

    </RelativeLayout>

</LinearLayout>
