<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.DatabaseInfoActivity"
    tools:showIn="@layout/activity_database_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/type_mark"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@color/indigo" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="This is content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="15sp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is type"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_time"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/creation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is creationTime"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is deadline"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp" />

</LinearLayout>